<resources>
    <string name="app_name">Notes</string>
    <string name="delete_record">Delete Note</string>
    <string name="edit_note">Edit note</string>
    <string name="edit_note_here">Edit note</string>
    <string name="edit_note_name">Edit note name</string>
    <string name="deleteAll">Delete All</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="prefs_theme_key">theme</string>
    <string name="your_note_name">Your note name</string>
    <string name="add_note">Add Note</string>
    <string name="create_password">Create Password</string>
    <string name="language">Language</string>
    <string name="set_password">Set Password</string>
    <string name="theme">Theme</string>
    <string name="en">en</string>
    <string name="hy">hy</string>
    <string name="rs">ru</string>
    <string name="ok">OK</string>
    <string name="Notes">Notes</string>
    <string name="Your_note_here">Your note</string>
    <string name="Searchsomething">Search something</string>
    <string name="Password_set">Password set</string>
    <string name="Note_added">Note added</string>
    <string name="Created">Created:</string>
    <string name="Nothing_to_save">Nothing to save</string>
    <string name="Edited">/ Edited:</string>
    <string name="Note_edited">Note edited</string>
    <string name="Nothing_to_edit">Nothing to edit</string>
    <string name="Password">Password</string>
    <string name="click_here_to_clear_drawing">Clear drawing</string>
    <string name="drawing">Drawing</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="Image_saved_to_gallery">Image saved to gallery Drawings folder.</string>


    <string name="pref_dark_theme">pref_dark_theme</string>
    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_value_blue">blue</string>
    <string name="pref_theme_value_green">green</string>
    <string name="pref_theme_value_brown">brown</string>
    <string name="write_your_password">Write your password</string>
    <string name="search">Search</string>
    <string name="sure">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_notes">You don\'t have notes.\nAdd by clicking on + button</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="pref_theme_options">
        <item><b>Blue</b></item>
        <item><b>Green</b></item>
        <item><b>Red</b></item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>@string/pref_theme_value_blue</item>
        <item>@string/pref_theme_value_green</item>
        <item>@string/pref_theme_value_brown</item>
    </string-array>

    <string name="drawings">Drawings</string>
    <string name="save_drawing">Save drawing</string>
    <string name="save_drawing_to_deviceGallery">Save drawing to device Gallery?</string>
    <string name="new_drawing">New drawing</string>
    <string name="delete_drawing">Delete drawing</string>
    <string name="share_drawing">Share drawing</string>
    <string name="share_note">Share note</string>
    <string name="more_apps">More apps</string>
    <string name="alarm">Reminder</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="edit_password">Edit password</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="press_Again">Please click back again to exit drawing</string>
</resources>
