<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vahan.simplecursonadapter.Settings1"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/backgroundColor"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/colorrr"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arme"
            android:text="@string/hy"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/russ"
            android:text="@string/rs"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/eng"
            android:text="@string/en"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
