<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackground"
    tools:context="com.example.vahan.simplecursonadapter.AddNote"
    android:orientation="vertical">




    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/backgroundColor"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textAlignment="center"
            android:textColor="@color/colorrr"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/check"
            android:text="ToggleButton"
            android:textOff=""
            android:textOn=""
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bl"
            tools:ignore="RtlHardcoded">
        </Button>

    </LinearLayout>




    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/your_note_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="keyedit"
        android:ems="10"
        android:hint="@string/Your_note_here"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:textSize="18sp"
        tools:ignore="ContentDescription,HardcodedText,LabelFor" />


</LinearLayout>
