<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackground"
    tools:context="com.example.vahan.simplecursonadapter.EditNote"
    android:orientation="vertical">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/backgroundColor"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/toolbar3"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/edit_note"
            android:textAlignment="center"
            android:textColor="@color/colorrr"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/check"
            android:text="ToggleButton"
            android:textOff=""
            android:textOn=""
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bl"
            tools:ignore="RtlHardcoded">

        </Button>

    </LinearLayout>





    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/edit_note_name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/edit_note_here"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:minHeight="50dp"
        android:selectAllOnFocus="false"
        tools:ignore="LabelFor"/>

</LinearLayout>
