<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context="com.example.vahan.simplecursonadapter.Drawing"
                  android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/backgroundColor"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawing"
            android:textAlignment="center"
            android:textColor="@color/color"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/blank1"
            android:contentDescription="@string/start_new"/>

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/brush1"
            android:contentDescription="@string/brush"/>

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/erase"
            android:contentDescription="@string/erase"/>


        <ImageButton
            android:id="@+id/undo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/undo"
            android:contentDescription="@string/save"/>

        <ImageButton
            android:id="@+id/redo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/redo"
            android:contentDescription="@string/save"/>

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/saveas"
            android:contentDescription="@string/save"/>

    </LinearLayout>

    <view
        android:id="@+id/drawing"
        class="com.example.vahan.simplecursonadapter.DrawingView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!-- Top Row -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/paint_colors"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF000000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF000000"/>


                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FFFF0000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF0000"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FFFF6600"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF6600"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FFFFCC00"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFFCC00"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF009900"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF009900"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF009999"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF009999"/>


                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF0000FF"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF0000FF"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF990099"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF990099"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FFFF6666"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FFFF6666"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#00e1ff"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#00e1ff"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF787878"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF787878"/>

                        <ImageButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="2dp"
                            android:background="#FF660000"
                            android:contentDescription="@string/paint"
                            android:onClick="paintClicked"
                            android:src="@drawable/paint"
                            android:tag="#FF660000"/>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
</LinearLayout>
